tests/cases/errors/dpi_import_output_arg/main.sv
module Top;
  import "DPI-C" function int f(output int x);
endmodule
